5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1592_1801.log
== SUBMITION (2019-03-31 18:17:15) 
-- CODE:
var = input(noiado)
var2 = var *4 
print("Abra", var2)
-- EXECUTION TIME:
0.1811
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 1, in <module>
    var = input(noiado)
NameError: name 'noiado' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 10:25:14) 
-- CODE:
f=input()#ordem
t=int(input())#repeticoes
C=(" Abra "+f)*t
print(C)

-- EXECUTION TIME:
0.196115
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
